--- a/Nanu_Alexandra_Lab11/ListEntryPage.xaml
+++ b/Nanu_Alexandra_Lab11/ListEntryPage.xaml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Nanu_Alexandra_Lab11.NewPage1"
-             Title="NewPage1">
-    <!--<VerticalStackLayout>
+             x:Class="Nanu_Alexandra_Lab11.ListEntryPage"
+             Title="ListEntryPage">
+   <!-- <VerticalStackLayout>
         <Label 
             Text="Welcome to .NET MAUI!"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
-    </VerticalStackLayout>-->
+    </VerticalStackLayout> -->
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Add Shopping List" 
                      Clicked="OnShopListAddedClicked" />
